<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_dark"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="175dp"
        android:text="@string/Hw10_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="175dp"
        android:textAppearance="?android:textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:textColor="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAtoB"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="175dp"
        android:onClick="click_AtoB"
        android:text="@string/Hw10_AtoB"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_1to2"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="120dp"
        android:text="@string/Hw10_1to2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_3to4"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5dp"
        android:text="@string/Hw10_3to4"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_1to2" />

    <Button
        android:id="@+id/btn_BtoC"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5dp"
        android:text="@string/Hw10_5to6"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_3to4" />

    <Button
        android:id="@+id/back"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5dp"
        android:text="@string/Hw10_7to8"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_BtoC" />

    <Button
        android:id="@+id/btn_CtoB"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5dp"
        android:text="@string/Hw10_9to10"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <Button
        android:id="@+id/btn_CtoA"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="5dp"
        android:text="@string/Hw10_11to12"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CtoB"
        style="@android:style/Widget.Button" />

</androidx.constraintlayout.widget.ConstraintLayout>