<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_dark"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/get_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:text="@string/Hw10_cash"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="63dp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="#AE2929"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/get_money"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_CtoB"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="200dp"
        android:onClick="re_number"
        android:text="@string/Hw10_CtoB"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_CtoA"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="10dp"
        android:onClick="re_month"
        android:text="@string/Hw10_BandCtoA"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_CtoB" />

</androidx.constraintlayout.widget.ConstraintLayout>